# platform-zero

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  demo-api-image.yaml  demo-api-release.yaml
argocd/: root-app.yaml
argocd/apps/: demo-api.yaml  observability.yaml
docs/: local-setup.md  platform-philosophy.md  service-contract.md
docs/incidents/: 2026-07-13-demo-api-latency-slo-breach.md  TEMPLATE.md
docs/runbooks/: demo-api.md
examples/demo-api/: Dockerfile  README.md  app.py
helm/service/: Chart.yaml  values.yaml
helm/service/templates/: deployment.yaml  service.yaml  servicemonitor.yaml
helm/service/values/: demo-api.yaml
local/: kind-config.yaml
observability/: Chart.yaml  values.yaml
observability/dashboards/: demo-api.json
observability/rules/: demo-api.yaml
observability/templates/: dashboards.yaml  prometheusrules.yaml
platform/: config.yaml  teams.yaml
scripts/: load.sh
services/demo-api/: service.yaml
src/platformctl/: cli.py  cluster.py  config.py  quantities.py  render.py  schema.py  status.py  teams.py  validators.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  (+2 more)
tests/: conftest.py  test_cli.py  test_cluster.py  test_config.py  test_init.py  test_render.py  test_render_cli.py  test_render_golden.py  test_schema.py  test_status.py  test_status_cli.py  test_teams.py  test_validate_cli.py  test_validators.py
(+7 files in other folders)
